PC端各功能页链接打通&首页图表完成&用户页动态渲染完成UPDATE

--- a/public/back/second.html
+++ b/public/back/second.html
@@ -35,7 +35,7 @@
 
             <div class="category-item">
               <a href="./first.html" class="item01">一级分类</a>
-              <a href="./second.html" class="item02">二级分类</a>
+              <a href="./second.html" class="item02 current">二级分类</a>
             </div>
           </li>
           <li class="lt-product">
@@ -64,15 +64,10 @@
       <div class="main">
         <!-- 面包屑导航 -->
         <ol class="breadcrumb">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Library</a></li>
-          <li>Data</li>
+          <li><a href="./index.html">管理系统</a></li>
+          <li><a href="#">分类管理</a></li>
+          <li class="active">二级分类</li>
         </ol>
-
-        <div class="content">
-          <div class="col-sm-6 left-bar"></div>
-          <div class="col-sm-6 right-bar"></div>
-        </div>
       </div>
     </div>
 
@@ -107,7 +102,6 @@
     <script src="./lib/jquery/jquery.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
-    <script src="./lib/echarts/echarts.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/checkLoginStatus.js"></script>
