--- a/public/back/first.html
+++ b/public/back/first.html
@@ -34,8 +34,8 @@
             </a>
 
             <div class="category-item">
-              <a href="./first.html" class="item01">一级分类</a>
-              <a href="./second.html" class="item02">二级分类</a>
+              <a href='./first.html' class="item01 current">一级分类</a>
+              <a href='./second.html' class="item02">二级分类</a>
             </div>
           </li>
           <li class="lt-product">
@@ -64,15 +64,10 @@
       <div class="main">
         <!-- 面包屑导航 -->
         <ol class="breadcrumb">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Library</a></li>
-          <li>Data</li>
+          <li><a href="./index.html">管理系统</a></li>
+          <li><a href="#">分类管理</a></li>
+          <li class="active">一级分类</li>
         </ol>
-
-        <div class="content">
-          <div class="col-sm-6 left-bar"></div>
-          <div class="col-sm-6 right-bar"></div>
-        </div>
       </div>
     </div>
 
@@ -80,7 +75,10 @@
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close">
+            <button
+              type="button"
+              class="close"
+            >
               <span aria-hidden="true">&times;</span>
             </button>
             <h4 class="modal-title">温馨提示</h4>
@@ -93,9 +91,7 @@
             <button type="button" class="btn btn-default" data-dismiss="modal">
               取消
             </button>
-            <button type="button" class="btn btn-primary btn-logout">
-              退出
-            </button>
+            <button type="button" class="btn btn-primary btn-logout">退出</button>
           </div>
         </div>
         <!-- /.modal-content -->
@@ -107,7 +103,6 @@
     <script src="./lib/jquery/jquery.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
-    <script src="./lib/echarts/echarts.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/checkLoginStatus.js"></script>
