--- a/public/back/user.html
+++ b/public/back/user.html
@@ -22,7 +22,7 @@
       <div class="lt-nav">
         <ul>
           <li class="lt-user">
-            <a href="./user.html">
+            <a href="./user.html" class="current">
               <span class="glyphicon glyphicon-user"></span>
               <span>用户管理</span>
             </a>
@@ -64,14 +64,23 @@
       <div class="main">
         <!-- 面包屑导航 -->
         <ol class="breadcrumb">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Library</a></li>
-          <li>Data</li>
+          <li><a href="./index.html">管理系统</a></li>
+          <li class="active">用户管理</li>
         </ol>
-
-        <div class="content">
-          <div class="col-sm-6 left-bar"></div>
-          <div class="col-sm-6 right-bar"></div>
+        <table class="table table-bordered user-table">
+          <thead>
+            <tr>
+              <td>序号</td>
+              <td>用户名</td>
+              <td>手机号</td>
+              <td>状态</td>
+              <td>操作</td>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+        <div class="pull-right">
+          <ul class="pages"></ul>
         </div>
       </div>
     </div>
@@ -103,13 +112,59 @@
       <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
+    <div class="modal fade toggleModal" tabindex="-1">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title">温馨提示</h4>
+          </div>
+          <div class="modal-body">
+            <span class="glyphicon glyphicon-info-sign"></span>
+            <span>您确定要进行此操作吗</span>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default btn-cancel" data-dismiss="modal">
+              取消
+            </button>
+            <button type="button" class="btn btn-primary btn-confirm">
+              退出
+            </button>
+          </div>
+        </div>
+        <!-- /.modal-content -->
+      </div>
+      <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
 
+    <script type="text/template" id="tmpt">
+      {{each $data v i}}
+      <tr>
+        <td>{{v.id}}</td>
+        <td>{{v.username}}</td>
+        <td>{{v.mobile}}</td>
+        <td>{{v.isDelete == 0 ? '正常':'禁用'}}</td>
+        <td data-id = {{v.id}} data-delete={{v.isDelete}}>
+          {{if(v.isDelete == 0)}}
+            <a href="#" class="btn btn-danger" data-toggle="modal" data-target=".toggleModal">禁用</a>
+          {{else}}
+            <a href="#" class="btn btn-primary" data-toggle="modal" data-target=".toggleModal">启用</a>
+          {{/if}}
+        </td>
+      </tr>
+      {{/each}}
+    </script>
     <script src="./lib/jquery/jquery.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
-    <script src="./lib/echarts/echarts.min.js"></script>
     <script src="./js/common.js"></script>
-    <script src="./js/index.js"></script>
     <script src="./js/checkLoginStatus.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
+
+    <script src="./js/user.js"></script>
   </body>
 </html>
