--- a/public/back/product.html
+++ b/public/back/product.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css" />
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/product.css" />
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
   </head>
   <body>
     <div class="lt-left body_bg">
@@ -34,8 +35,8 @@
             </a>
 
             <div class="category-item">
-              <a href='./first.html' class="item01">一级分类</a>
-              <a href='./second.html' class="item02">二级分类</a>
+              <a href="./first.html" class="item01">一级分类</a>
+              <a href="./second.html" class="item02">二级分类</a>
             </div>
           </li>
           <li class="lt-product">
@@ -67,6 +68,35 @@
           <li><a href="./index.html">管理系统</a></li>
           <li class="active">商品管理</li>
         </ol>
+
+        <!-- data-target='selector'必须是个类名! -->
+        <a
+          href="#"
+          class="btn btn-default btn-add-product"
+          data-target=".add-product-modal"
+          data-toggle="modal"
+          >添加商品</a
+        >
+
+        <table class="table table-bordered" id="tb-product">
+          <thead>
+            <tr>
+              <th width="10%">序号</th>
+              <th width="25%">商品名称</th>
+              <th width="25%">商品描述</th>
+              <th width="10%">商品库存</th>
+              <th width="10%">商品尺寸</th>
+              <th width="10%">商品状态</th>
+              <th width="10%">操作</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- 动态添加行 -->
+          </tbody>
+        </table>
+        <div class="lt-pages pull-right">
+          <ul class="pages"></ul>
+        </div>
       </div>
     </div>
 
@@ -74,10 +104,7 @@
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
           <div class="modal-header">
-            <button
-              type="button"
-              class="close"
-            >
+            <button type="button" class="close">
               <span aria-hidden="true">&times;</span>
             </button>
             <h4 class="modal-title">温馨提示</h4>
@@ -90,7 +117,9 @@
             <button type="button" class="btn btn-default" data-dismiss="modal">
               取消
             </button>
-            <button type="button" class="btn btn-primary btn-logout">退出</button>
+            <button type="button" class="btn btn-primary btn-logout">
+              退出
+            </button>
           </div>
         </div>
         <!-- /.modal-content -->
@@ -99,11 +128,161 @@
     </div>
     <!-- /.modal -->
 
+    <div class="modal fade add-product-modal" tabindex="-1">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title">添加新商品</h4>
+          </div>
+          <div class="modal-body">
+            <form id="add-product-form">
+              <div class="form-group">
+                <!-- Single button -->
+                <div class="btn-group">
+                  <button
+                    type="button"
+                    class="btn btn-default dropdown-toggle btn-toggle"
+                    data-toggle="dropdown"
+                  >
+                    请选择二级分类 <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                  </ul>
+                </div>
+                <input type="hidden" name="brandId" id="iptCategory" />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="iptName"
+                  name="proName"
+                  placeholder="请输入商品名称"
+                />
+              </div>
+              <div class="form-group">
+                <!-- <input type="text" class="form-control" id="iptDesc" placeholder="请输入商品描述"> -->
+                <textarea
+                  class="form-control"
+                  rows="3"
+                  name="proDesc"
+                  placeholder="请输入商品描述"
+                ></textarea>
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="iptNum"
+                  name="num"
+                  placeholder="请输入商品库存"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="iptSize"
+                  name="size"
+                  placeholder="请输入商品尺码"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="iptOldPrice"
+                  name="oldPrice"
+                  placeholder="请输入商品原价"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="iptPrice"
+                  name="price"
+                  placeholder="请输入商品现价"
+                />
+              </div>
+              <div class="form-group">
+                <!-- 只有label for=''和input进行关联,你把label换成a就不行！ -->
+                <label for="fileupload" href="#" class="btn btn-default"
+                  >上传图片</label
+                >
+                <!-- name指定图片上传时的name属性 -->
+                <!-- data-url指定图片上传时的接口地址 -->
+                <!-- multiple指定多文件上传 -->
+                <input
+                  id="fileupload"
+                  type="file"
+                  name="pic1"
+                  class="hidden"
+                  data-url="/product/addProductPic"
+                  multiple
+                />
+                <div class="images-preview">
+                  <input type="hidden" name="imageStatus">
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">
+              取消
+            </button>
+            <button form="add-product-form" type="submit" class="btn btn-primary btn-add">添加</button>
+          </div>
+        </div>
+        <!-- /.modal-content -->
+      </div>
+      <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
+    <script type="text/template" id="tmpt">
+      {{each rows v i}}
+        <tr>
+          <td>{{v.id}}</td>
+          <td>{{v.proName}}</td>
+          <td>{{v.proDesc}}</td>
+          <td>{{v.num}}</td>
+          <td>{{v.size}}</td>
+          <td>{{v.statu === 1 ? "已上架" : "已下架"}}</td>
+          <td>
+            {{if v.statu == 1}}
+              <button class="btn btn-danger">下架</button>
+            {{else}}
+              <button class="btn btn-primary">上架</button>
+            {{/if}}
+          </td>
+        </tr>
+      {{/each}}
+    </script>
+    <li><a href="#">Action</a></li>
+    <script type="text/template" id="tmpt-category-list">
+      {{each rows v i}}
+        <li data-id={{v.categoryId}}><a href="#">{{v.categoryName}}</a></li>
+      {{/each}}
+    </script>
     <script src="./lib/jquery/jquery.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
+    <!-- jquery ui小部件，上传插件依赖了jquery ui的小部件 -->
+    <script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+    <!-- 如果上传图片需要跨域，那么需要引入这个js文件，如果不跨域，则不需要引入 -->
+    <script src="./lib/jquery-fileupload/jquery.iframe-transport.js"></script>
+    <!-- jquery上传插件 -->
+    <script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
     <script src="./js/common.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/product.js"></script>
     <script src="./js/checkLoginStatus.js"></script>
   </body>
 </html>
