--- a/public/back/second.html
+++ b/public/back/second.html
@@ -6,8 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css" />
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/second.css" />
   </head>
   <body>
     <div class="lt-left body_bg">
@@ -68,6 +69,40 @@
           <li><a href="#">分类管理</a></li>
           <li class="active">二级分类</li>
         </ol>
+        <div class="lt-content">
+          <a href=".addModal" class="btn btn-default" data-toggle="modal"
+            >添加分类</a
+          >
+          <table class="table table-bordered tb-content">
+            <thead>
+              <tr>
+                <td>序号</td>
+                <td>一级分类名称</td>
+                <td>二级分类名称</td>
+                <td>二级分类LOGO</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>&</td>
+                <td>&</td>
+                <td>&</td>
+                <td>&</td>
+              </tr>
+              <tr>
+                <td>&</td>
+                <td>&</td>
+                <td>&</td>
+                <td>&</td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="lt-pages pull-right">
+            <ul class="pages">
+              pages
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -99,11 +134,109 @@
     </div>
     <!-- /.modal -->
 
+    <div class="modal fade addModal" tabindex="-1">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title">添加分类</h4>
+          </div>
+          <div class="modal-body">
+            <form id="add-modal-form">
+              <div class="form-group">
+                <div class="dropdown">
+                  <button
+                    class="btn btn-default dropdown-toggle"
+                    type="button"
+                    id="dropdownMenu1"
+                    data-toggle="dropdown"
+                  >
+                    请选择一级分类
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Something else here</a></li>
+                  </ul>
+                  <input
+                    type="hidden"
+                    name="categoryId"
+                    id="iptCategoryId"
+                    class="hidden"
+                  />
+                </div>
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  name="brandName"
+                  id="iptSecondCategory"
+                  placeholder="请输入二级分类"
+                />
+              </div>
+              <div class="form-group">
+                <!-- 此处把label做成一个按钮，通过for关联，把点击处理关联给了input:file,而真正的ipt:file是隐藏了！ -->
+                <label for="iptFile" class="btn btn-success">选择图片</label>
+                <input
+                  class="form-control hidden"
+                  type="file"
+                  name="pic1"
+                  data-url="/category/addSecondCategoryPic"
+                  id="iptFile"
+                />
+                <br />
+                <img src="./images/default.png" alt="xxx" id="img-preview" />
+                <input type="hidden" name="brandLogo" id="brandLogo">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">
+              取消
+            </button>
+            <!-- form="add-modal-form" 关联submit btn 和某个form -->
+            <button form="add-modal-form" type="submit" class="btn btn-primary btn-confirm">
+              提交
+            </button>
+          </div>
+        </div>
+        <!-- /.modal-content -->
+      </div>
+      <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
+    <script type="text/template" id="tmpt">
+      <!-- i start from 0  -->
+      {{each rows v i}}
+      <tr>
+        <td>{{2*(page-1)+1+i}}</td>
+        <td>{{v.categoryName}}</td>
+        <td>{{v.brandName}}</td>
+        <td><img src={{v.brandLogo}} alt=""></td>
+      </tr>
+      {{/each}}
+    </script>
+
+    <script type="text/template" id="tmpt-category">
+      {{each rows v i}}
+        <li data-id = {{v.id}}><a href="#">{{v.categoryName}}</a></li>
+      {{/each}}
+    </script>
     <script src="./lib/jquery/jquery.js"></script>
+
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.js"></script>
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
     <script src="./js/common.js"></script>
-    <script src="./js/index.js"></script>
     <script src="./js/checkLoginStatus.js"></script>
+    <!-- 引入 jquery-fileupload 包 好像把这两个包放到bootstrap前面有问题-->
+    <script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+    <script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
+    <script src="./js/second.js"></script>
   </body>
 </html>
