--- a/public/front/main.html
+++ b/public/front/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./lib/fa/css/font-awesome.css" />
     <link rel="stylesheet" href="./lib/mui/css/mui.css" />
     <link rel="stylesheet" href="./css/main.css" />
@@ -14,7 +15,7 @@
       <div class="lt-header">
         <a href="#"><span class="fa fa-home"></span></a>
         <p class="mui-text-center">我是标题</p>
-        <a href="#" class="search"><span class="fa fa-search"></span></a>
+        <a href="./search.html" class="search"><span class="fa fa-search"></span></a>
       </div>
       <div class="lt-main">
         <div class="mui-scroll-wrapper">
@@ -142,21 +143,29 @@
       </div>
       <div class="lt-footer">
         <ul class="mui-clearfix">
-          <li>
-            <span class="mui-icon mui-icon-home"></span>
-            <p>首页</p>
+          <li class="current">
+            <a href="./main.html">
+              <span class="mui-icon mui-icon-home"></span>
+              <p>首页</p>
+            </a>
           </li>
           <li>
-            <span class="mui-icon mui-icon-bars"></span>
-            <p>分类</p>
+            <a href="./category.html">
+              <span class="mui-icon mui-icon-bars"></span>
+              <p>分类</p>
+            </a>
           </li>
           <li>
-            <span class="fa fa-cart-arrow-down"></span>
-            <p>购物车</p>
+            <a href="./cart.html">
+              <span class="fa fa-cart-arrow-down"></span>
+              <p>购物车</p>
+            </a>
           </li>
           <li>
-            <span class="mui-icon mui-icon-contact"></span>
-            <p>用户中心</p>
+            <a href="./user.html">
+              <span class="mui-icon mui-icon-contact"></span>
+              <p>用户中心</p>
+            </a>
           </li>
         </ul>
       </div>
